Timeline working like it should've when first created after converting to calss style fixed minor bug in color picker and scrollbar

--- a/components/css/TimePanel.css
+++ b/components/css/TimePanel.css
@@ -330,6 +330,7 @@
 	overflow:hidden;
 	width:100%;
 	min-height:140px;
+	height:140px;
 }
 
 .time-panel .timeline-area  .anim {
